# canary

./: .gitignore  CMakeLists-old.txt  CMakeLists.txt  MLTA.cc  README.md  TODO.md  alias_comparison_results.txt
config/: modref.spec  ptr.spec
doc/: dev.md  findbugs.md  kint.md  opt.md  sec.md
docs/: Makefile  fix_rst_underlines.py  requirements.txt  setup_docs.sh
docs/source/: conf.py  index.rst
examples/: AndersenExample.cpp  BDDExample.cpp  BDDPtsSetBenchmark.cpp  CMakeLists.txt  ModelCheckingExample.cpp  PDGExample.cpp  RapidJSONExample.cpp
examples/wpds/: CMakeLists.txt
examples/wpds/GenKill/: CMakeLists.txt  dictionary_t.h
examples/wpds/Reach/: CMakeLists.txt
include/Alias/: PointerAnalysisInterface.h
include/CFLAA/: AliasAnalysisSummary.h  CFLAndersAliasAnalysis.h  CFLGraph.h  CFLSteensAliasAnalysis.h  StratifiedSets.h
include/Dataflow/: DataFlow.h  DataFlowAnalysis.h  DataFlowEngine.h  DataflowAnalysis.h  LivenessAnalysis.h  ReachingDefinitions.h
include/DyckAA/: DyckGraphEdgeLabel.h
include/NullPointer/: ContextSensitiveLocalNullCheckAnalysis.h  ContextSensitiveNullCheckAnalysis.h  ContextSensitiveNullFlowAnalysis.h  LocalNullCheckAnalysis.h
include/SMT/: AllSMT.h
include/Solvers/: BDD.h
include/Support/: MultiThreading.h  Offset.h  Optional.h  RNG.h  Timer.h  log.h  range.h
include/Transform/: LowerConstantExpr.h  LowerGlobalConstantArraySelect.h  LowerSelect.h  MergeReturn.h  NameBlock.h  RemoveDeadBlock.h  RemoveNoRetFunction.h  SimplifyLatch.h
include/seadsa/: GraphTraits.hh  Info.hh
lib/: CMakeLists.txt
lib/Alias/: CMakeLists.txt  PointerAnalysisInterface.cpp
lib/Alias/Andersen/: Andersen.cpp  AndersenAA.cpp  CMakeLists.txt  ConstraintCollect.cpp  ConstraintOptimize.cpp  ConstraintSolving.cpp  ExternalLibrary.cpp  NodeFactory.cpp  README.md
lib/Alias/DyckAA/: AAAnalyzer.cpp  CMakeLists.txt  DyckAliasAnalysis.cpp  DyckCallGraph.cpp  DyckCallGraphNode.cpp  DyckGraph.cpp  DyckGraphNode.cpp  DyckModRefAnalysis.cpp  DyckVFG.cpp  DyckValueFlowAnalysis.cpp  MRAnalyzer.cpp  MRAnalyzer.h
lib/Alias/Dynamic/: CMakeLists.txt  DynamicAliasAnalysis.cpp  DynamicHooks.cpp  FeatureCheck.cpp  IDAssigner.cpp  LogPrinter.cpp  LogReader.cpp  MemoryHooks.c  MemoryInstrument.cpp
lib/Alias/seadsa/: AllocSiteInfo.cc  AllocWrapInfo.cc  CMakeLists.txt  CallGraphWrapper.cc  Cloner.cc  Debug.cc  DsaAllocSite.cc  DsaAnalysis.cc  DsaBottomUp.cc  DsaCallGraphPrinter.cc  DsaCallSite.cc  DsaColor.cc  DsaCompleteCallGraph.cc  DsaGlobal.cc  DsaInfo.cc  DsaLibFuncInfo.cc  DsaLocal.cc  DsaPrinter.cc  DsaStats.cc  DsaTopDown.cc  FieldType.cc  Graph.cc  InitializePasses.cc  Mapper.cc  NameValues.cc  RemovePtrToInt.cc  SeaDsaAliasAnalysis.cc  SeaMemorySSA.cc  ShadowMem.cc  SpecLang.cc  TypeUtils.cc
lib/Annotation/: CMakeLists.txt  ExternalModRefTable.cpp  ExternalModRefTablePrinter.cpp  ExternalPointerTable.cpp  ExternalPointerTablePrinter.cpp
lib/CFLAA/: CFLAndersAliasAnalysis.cpp  CFLSteensAliasAnalysis.cpp  CMakeLists.txt
lib/CSIndex/: CSProgressBar.cpp  DataComp.cpp  Grail.cpp  Graph.cpp  GraphUtil.cpp  Query.cpp  TCSEstimator.cpp
lib/Checker/: CMakeLists.txt
lib/Checker/ESSS/: Analyzer.cc  CMakeLists.txt  CallGraph.cc  CallGraph.cpp  Common.cc  Common.cpp  DataFlowAnalysis.cc  DataFlowAnalysis.cpp  DebugHelpers.cc  DebugHelpers.cpp  EHBlockDetector.cc  EHBlockDetector.cpp  ErrorCheckViolationFinder.cc  ErrorCheckViolationFinder.cpp  FunctionErrorReturnIntervals.cc  FunctionErrorReturnIntervals.cpp  FunctionVSA.cc  FunctionVSA.cpp  Helpers.cc  Helpers.cpp  Interval.cc  Interval.cpp  MLTA.cc  MLTA.cc.bak  MLTA.cpp  PathSpan.cc  README.md
lib/Dataflow/: CMakeLists.txt  DataFlowAnalysis.cpp  DataFlowEngine.cpp  DataFlowResult.cpp  DataflowAnalysis.cpp  LivenessAnalysis.cpp  README.md  ReachingDefinitions.cpp
lib/DyckAA/: AAAnalyzer.cpp  DyckAliasAnalysis.cpp  DyckCallGraph.cpp
lib/IR/: CMakeLists.txt
lib/NullPointer/: AliasAnalysisAdapter.cpp  CMakeLists.txt  ContextSensitiveLocalNullCheckAnalysis.cpp  ContextSensitiveNullCheckAnalysis.cpp  ContextSensitiveNullFlowAnalysis.cpp  NullCheckAnalysis.cpp  NullFlowAnalysis.cpp
lib/Solvers/WPDS/: CMakeLists.txt  dictionary.cpp  keys.cpp
lib/Support/: API.cpp  CFG.cpp  CMakeLists.txt  FileUtils.cpp  InstructionUtils.cpp  Log.cpp  MultiThreading.cpp  RNG.cpp  Statistics.cpp  StringUtils.cpp  Timer.cpp  log.cpp
lib/Support/IO/: FileUtils.cpp  ReadIR.cpp  WriteIR.cpp
lib/seadsa/: AllocSiteInfo.cc  AllocWrapInfo.cc  CMakeLists.txt  DsaAnalysis.cc  DsaCompleteCallGraph.cc  DsaInfo.cc  DsaLibFuncInfo.cc  DsaLocal.cc  InitializePasses.cc  RemovePtrToInt.cc  SeaDsaAliasAnalysis.cc  ShadowMem.cc
scripts/: dataflow_benchmark.sh
tools/: CMakeLists.txt
tools/canary/: CMakeLists.txt  alias_analysis.cpp  canary.cpp
tools/dataflow/: CMakeLists.txt  dataflow-tool.cpp
tools/dynaa/: CMakeLists.txt  README.md  dynaa-check.cpp  dynaa-instrument.cpp  dynaa-log-dump.cpp  dynaa.cpp
tools/esss/: CMakeLists.txt  esss.cpp  esss_tool.cpp
tools/horn-ice/: CMakeLists.txt  README.md
tools/kint/: CMakeLists.txt  kint.cpp
tools/seadsa/: CMakeLists.txt  sea-dsa-dg.cpp  seadsa-tool.cpp
tools/z_solver/: .gitignore  CMakeLists.txt  README.md  bestInvMain.cpp  csvDealer.cpp  csvDealer.h  kInductorMain.cpp  parameterParser.cpp  parameterParser.h
tools/z_solver/bestInv/: ABVBitwiseInvariant.cpp  UBVIntervalInvariant.cpp  UBVOctagonInvariant.cpp  chcParser.cpp  chcParser.h  invTemplate.cpp  invTemplate.h  transitionSystem.cpp  transitionSystem.h
tools/z_solver/frontend/: SyGuSParser.cpp  SyGuSParser.h  c2chc.cpp  cParser.cpp  cParser.h  sygus2chc.cpp
tools/z_solver/kInduction/: kInductor.cpp  kInductor.h
tools/z_solver/modelSolver/: assertionDatabase.cpp  assertionDatabase.h  generalExpr.cpp  generalExpr.h
tools/z_solver/parallelSolver/: baseSolver.cpp  baseSolver.h  clusterSolver.cpp  clusterSolver.h
tools/z_solver/script/: analysis.py  exp.py  extract_good.py  extract_safe.py  make_plot.sh  movef.py  run_all_exp.sh  stat.py  test.py
tools/z_solver/utils/: z3_Utils.h  zUtils.cpp  zUtils.h
(+441 files in other folders)
