add_library(CanarySupport STATIC
        API.cpp
        CFG.cpp
        ProgressBar.cpp
        RecursiveTimer.cpp
        Statistics.cpp
        ThreadPool.cpp
        InstructionUtils.cpp
        Debug.cpp
        Log.cpp
        StringUtils.cpp
        FileUtils.cpp
        MultiThreading.cpp
        Timer.cpp
        RNG.cpp
)
